# invoice-processor

./: .env  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/endpoints/: invoice.py  product.py  whitelist.py
app/core/: cli.py  config.py  database.py  dependencies.py  file_validation.py
app/core/generators/: __init__.py  new_resource.py
app/ml/: pipeline.py  state.py
app/ml/nodes/: anomaly_node.py  extraction_node.py  ocr_node.py  validation_node.py
app/models/: invoice.py  product.py  whitelist.py
app/repositories/: base_repository.py  invoice_repository.py  invoice_repository_interface.py  product_repository.py  product_repository_interface.py  whitelist_repository.py  whitelist_repository_interface.py
app/schemas/: invoice.py  product.py  whitelist.py
app/services/: docling_service.py  invoice_service.py  product_service.py  whitelist_service.py
docs/: architecture.mmd
migrations/: env.py
migrations/versions/: 1fb2597f20e2_create_invoices_table.py  308c8c09fe66_auto_migration.py  33a3c4534a9a_add_whitelisted_vendors_table.py  3546d3b94b99_add_tax_exempt_fields_to_invoices.py
prompts/: extraction_prompt.example.txt  extraction_prompt.simple.txt
scripts/: test_pipeline.py
tests/: conftest.py  test_file_validation.py  test_invoice_api.py  test_invoice_service.py
