[project]
name = "invoice-processor"
version = "0.1.0"
description = ""
authors = [
    {name = "CodeguruEdison",email = "ayaskanta.samal@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "greenlet>=3.0.0",
    "uuid (>=1.30,<2.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "python-multipart>=0.0.9",
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "app"}]

[tool.poetry.scripts]
dev = "app.main:start"
migrate = "app.core.cli:migrate"
migration = "app.core.cli:migration"
downgrade = "app.core.cli:downgrade"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["app", "migrations"]

[tool.ruff.format]
quote-style = "double"